// Code generated by j5convert. DO NOT EDIT.

syntax = "proto3";

package o5.ges.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "j5/ext/v1/annotations.proto";
import "j5/types/any/v1/any.proto";

message Event {
  option (j5.ext.v1.message).object = {};

  string id = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];

  string entity_name = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];

  uint64 sequence = 3 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).integer = {}
  ];

  google.protobuf.Timestamp timestamp = 4 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).timestamp = {}
  ];

  string event_type = 5 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];

  j5.types.any.v1.Any entity_keys = 6 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).any = {}
  ];

  j5.types.any.v1.Any event_data = 7 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).any = {}
  ];

  j5.types.any.v1.Any entity_state = 8 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).any = {}
  ];
}

message Upsert {
  option (j5.ext.v1.message).object = {};

  string entity_name = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];

  string entity_id = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];

  string event_id = 3 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];

  google.protobuf.Timestamp timestamp = 4 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).timestamp = {}
  ];

  j5.types.any.v1.Any data = 5 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).any = {}
  ];
}
